# OP2Task

./: CMakeLists.txt  DynamicArray.cpp  README.md  binsearch.cpp  binsearch.h  comparator.cpp  comparator.h  generate.cpp  generate.h  kursiokai.txt  libai.h  main.cpp  mean.cpp  mean.h  median.cpp  median.h  printas.cpp  printas.h  studentas.cpp  studentas.h  writeas.cpp  writeas.h
Doxygen_HTML_Katalogas/: _r_e_a_d_m_e_8md.html  annotated.html  classes.html  classstudentas-members.html  classstudentas.html  classzmogus-members.html  classzmogus.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  index.html  jquery.js  libai_8h.html  libai_8h_source.html  main_8cpp.html  md__r_e_a_d_m_e.html  menudata.js  pages.html  studentas_8cpp.html  studentas_8h.html  studentas_8h_source.html
Doxygen_HTML_Katalogas/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  files_1.js  files_2.js  files_3.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  related_0.js  search.js  searchdata.js  variables_0.js  variables_1.js
